feat: fix openapi